# TransformerLM-from-scratch

./: .gitignore  AGENTS.md  README.md  cross-entropy-pytorch.ipynb  llm-from-scratch.ipynb  pyproject.toml  scratch_again.ipynb
ch04/: train2.py
ch05/: gpt2.py
cs336/: README.md  modal_tinystories.py
cs336/ass1/assignment1-basics/cs336_basics/: Training.py  TransformerLM.py  generating.py  loss_optimizer.py  (+3 more)
cs336/experiments/: experiment_log.md
cs336/experiments/b200_lr1p25e-3_bs128_10k/: config.json  gpu.csv  metrics.csv
cs336/experiments/b200_lr1p25e-3_bs128_postnorm10k/: config.json  gpu.csv  metrics.csv
cs336/experiments/b200_lr1p25e-3_bs128_rmsAblation10k/: config.json  gpu.csv  metrics.csv
cs336/experiments/b200_telemetry_bs128_300steps_v2_artifacts/: gpu.csv  metrics.csv
cs336/experiments/lr_1.25e-3_sweep6/: config.json  metrics.csv
cs336/experiments/lr_sweep_comparison_20260529/: lr_sweep_research_summary.csv
cs336/experiments/perf_3070_20260528_202842/: config.json  gpu.csv  metrics.csv  performance_report.md  performance_summary.json  scaling_projection.csv
cs336/experiments/tinystories_baseline_20260528_175419/: config.json  metrics.csv
cs336/figures/: tinystories_b200_scaling_summary.csv
cs336/notes/: lecture-01.md
cs336/scripts/: generate_tinystories.py
docs/: environment.md
from-scratch-book/: demo.py  llm-from-scratch.ipynb  notes.md  test.ipynb  tokenizer.py
from-scratch-book/ch02/: dataloader.py  simpletokenizer.py
from-scratch-book/ch03/: attention.py  mutiheadattention.py
from-scratch-book/ch04/: train.py
(+11 files in other folders)
